# snake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  main.hpp  snake.cpp
build_configs/linux/appimage/: structure.txt
build_configs/linux/appimage/snake.AppDir/: .DirIcon  AppRun  snake  snake.desktop
build_configs/linux/appimage/snake.AppDir/res/: icon.rc
build_configs/linux/appimage/snake.AppDir/usr/: lib
build_configs/linux/appimage/snake.AppDir/usr/lib/: libSDL2-2.0.so.0  libSDL2_mixer-2.0.so.0  libSDL2_ttf-2.0.so.0  libjxl.so.0.8  libnotify.so.4
build_configs/windows/: innosetup.iss
include/: error.hpp  game.hpp  graphic_handler.hpp  main.hpp  sdl_window.hpp  snake.hpp  sound.hpp  wxwids.hpp
legacy.code/: main.cpp  main.hpp  snake.cpp
lib/SDL2/linux/: libSDL2_image-2.0.so.0  libhwy.so.1  libwx_baseu-3.2.so.0
res/: icon.rc  icon.res
src/: error.cpp  fonts.cpp  food.cpp  game.cpp  graphic_handler.cpp  main.cpp  sdl_window.cpp  snake.cpp  sound.cpp  wall.cpp
